--- a/Nachhilfe/src/app/components/cards/cards.component.html
+++ b/Nachhilfe/src/app/components/cards/cards.component.html
@@ -1,57 +1,65 @@
-<ul>
-  <li>
-    <img src="../assets/images/geometry.jpg"/>
-    <div class="details">
-      <div class="header">
+
+<!DOCTYPE html>
+<html lang="de">
+  <head>
+    <title> Kurse Übersicht seite</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  </head>
+<ul >
+  <li tabindex="0">
+    <img src="../assets/images/geometry.jpg" alt="etwas beschreibt Mathemathik" tabindex="0"/>
+    <section class="details">
+      <section class="header">
         <span class="name"><h2>Mathe Kurs</h2></span>
-      </div>
+      </section>
       <span class="kurse-time">Montags vom 15:30 bis 17:30 Uhr und Freitags vom 13:00 bis 15:00 Uhr</span>
-      </div>
+    </section>
 
-      <li>
-     <img src="../assets/images/physik.jpg"/>
-     <div class="details">
-       <div class="header">
+      <li tabindex="0">
+     <img src="../assets/images/physik.jpg" alt="physik themen" tabindex="0"/>
+     <section class="details">
+       <section class="header">
          <span class="name"><h2>Physik Kurs</h2></span>
-       </div>
+       </section>
        <span class="time">Donnerstags vom 13:00 bis 15:00 Uhr</span>
-       </div>
+      </section>
 
-    <li>
-      <img src="../assets/images/chemie.jpg"/>
-      <div class="details">
-        <div class="header">
+    <li tabindex="0">
+      <img src="../assets/images/chemie.jpg" alt="chemie themen" tabindex="0"/>
+      <section class="details">
+        <section class="header">
           <span class="name"><h2>Chemie Kurs</h2></span>
-        </div>
+        </section>
         <span class="time">Mitwochs vom 13:00 bis 15:00 Uhr</span>
-        </div>
+      </section>
 
-          <li>
-            <img src="../assets/images/Biologie.jpg"/>
-            <div class="details">
-              <div class="header">
+          <li tabindex="0">
+            <img src="../assets/images/Biologie.jpg" alt="Biologie Thema" tabindex="0"/>
+            <section class="details">
+              <section class="header">
                 <span class="name"><h2>Biologie Kurs</h2></span>
-              </div>
+              </section>
               <span class="time">Montags vom 15:00 bis 17:00 Uhr</span>
-            </div>
+            </section>
 
-            <li>
-        <img src="../assets/images/german.jpg"/>
-        <div class="details">
-          <div class="header">
-            <span class="name"><h2>Deutsch Kurs</h2></span>
-          </div>
+            <li tabindex="0">
+        <img src="../assets/images/german.jpg" alt="Deutsch kurse" tabindex="0"/>
+        <section class="details">
+          <section class="header">
+            <span class="name" ><h2>Deutsch Kurs</h2></span>
+          </section>
           <span class="time">Dienstags vom 13:00 bis 15:00 Uhr </span>
-          </div>
+        </section>
 
-        <li>
-            <img src="../assets/images/Englisch.jpg"/>
-            <div class="details">
-              <div class="header">
+        <li tabindex="0">
+            <img src="../assets/images/Englisch.jpg" alt="Englisch kurse" tabindex="0"/>
+            <section class="details">
+              <section class="header">
                 <span class="name"><h2>Englisch Kurs</h2></span>
-              </div>
+              </section>
               <span class="time">Montags vom 13:00 bis 15:00 Uhr</span>
-            </div>
+            </section>
             </li>
             </ul>
 
