--- a/Nachhilfe/src/app/components/detail/detail.component.html
+++ b/Nachhilfe/src/app/components/detail/detail.component.html
@@ -1,46 +1,46 @@
 
 <main class="d-flex min-vh-100">
   <fieldset class="container  mt-5">
-    <legend *ngIf="student" class="mb-4">Eintrag von {{ student.firstname }} {{ student.lastname }} aktualisieren
+    <legend *ngIf="student" class="mb-4" tabindex="0">Eintrag von {{ student.firstname }} {{ student.lastname }} aktualisieren
     </legend>
-    <legend *ngIf="!student" class="mb-4">Eintrag aktualisieren</legend>
+    <legend *ngIf="!student" class="mb-4" tabindex="0">Eintrag aktualisieren</legend>
     <form [formGroup]="form" (ngSubmit)="update()">
       <div class="mb-3 row">
-        <label class="col-2 col-form-label" for="firstname">Vorname</label>
+        <label for="firstname" class="col-2 col-form-label" tabindex="0" >Vorname</label>
         <div class="col-10">
-          <input type="text" class="form-control" id="firstname" placeholder="Vorname"
+          <input  id="firstname" type="text"  tabindex="0" class="form-control" placeholder="Vorname"
           formControlName="firstnameControl" />
         </div>
       </div>
       <div class="mb-3 row">
-        <label class="col-2 col-form-label" for="lastname">Nachname</label>
+        <label for="lastname" class="col-2 col-form-label" tabindex="0" >Nachname</label>
         <div class="col-10">
-          <input type="text" class="col-10 form-control" id="lastname" placeholder="Nachname"
+          <input id="lastname" type="text"  tabindex="0" class="col-10 form-control"  placeholder="Nachname"
           formControlName="lastnameControl" />
         </div>
       </div>
       <div class="mb-3 row">
-        <label class="col-2 col-form-label" for="email">E-Mail</label>
+        <label for="email" class="col-2 col-form-label" tabindex="0" >E-Mail</label>
         <div class="col-10">
-          <input type="email" class="col-10 form-control" id="email" placeholder="E-Mail" formControlName="emailControl" />
+          <input type="email" tabindex="0" class="col-10 form-control" id="email" placeholder="E-Mail" formControlName="emailControl" />
         </div>
       </div>
       <div class="mb-3 row">
-        <label class="col-2 col-form-label" for="address">Adresse</label>
+        <label for="address" class="col-2 col-form-label" tabindex="0" >Adresse</label>
         <div class="col-10">
-          <input type="text" class="col-10 form-control" id="address" placeholder="Wohnadresse" formControlName="addressControl" />
+          <input type="text" tabindex="0" class="col-10 form-control" id="address" placeholder="Wohnadresse" formControlName="addressControl" />
         </div>
       </div>
       <div class="mb-3 row">
-        <label class="col-2 col-form-label" for="kurse">Kurse</label>
+        <label for="kurse" class="col-2 col-form-label" tabindex="0" >Kurse</label>
         <div class="col-10">
-          <input type="text" class="col-10 form-control" id="kurse" placeholder="kurse" formControlName="kurseControl" />
+          <input type="text" class="col-10 form-control" id="kurse" placeholder="kurse" formControlName="kurseControl" tabindex="0"/>
         </div>
       </div>
       <div class="row ">
-        <button type="submit" class="col-5 btn btn-secondary">Aktualisieren</button>
+        <button type="submit" class="col-5 btn btn-secondary" tabindex="0" role="button" aria-label="Update">Aktualisieren</button>
         <div class="col-2"></div>
-        <button type="button" class="col-5 btn btn-secondary" (click)="cancel() ">Abbrechen</button>
+        <button type="button" class="col-5 btn btn-secondary" (click)="cancel() " tabindex="0" role="button" aria-label="Cancel">Abbrechen</button>
       </div>
     </form>
   </fieldset>
