--- a/Nachhilfe/src/app/components/startseite/startseite.component.css
+++ b/Nachhilfe/src/app/components/startseite/startseite.component.css
@@ -1,4 +1,4 @@
-.redirect-button{
+.mat-raised-button{
   display: inline-block;
   padding: 15px 25px;
   font-size: 24px;
@@ -10,14 +10,13 @@
   background-color: #936bca;
   border: none;
   border-radius: 15px;
-  box-shadow: 0 9px #999;
   float:right;
   position: relative;
   bottom: -.10rem;
   left: -6.4rem;
 
 }
-.redirect-button2{
+.mat-raised-button2{
   display: inline-block;
   padding:15px 25px;
   font-size: 24px;
@@ -25,7 +24,6 @@
   background-color: #936bca;
   border: none;
   border-radius: 15px;
-  box-shadow: 0 9px #999;
   position:relative;
   bottom: -.10em;
   text-decoration: none;
