--- a/Nachhilfe/src/styles.css
+++ b/Nachhilfe/src/styles.css
@@ -7,3 +7,20 @@ body{
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+*:focus {
+  outline: 2px solid rgb(249, 149, 0);
+  outline-offset: 2px;
+  box-shadow: 0 0 0 2px rgb(249, 149, 0); /* adds a subtle box shadow */
+  border: 1px solid rgb(249, 149, 0); /* adds a thin border */
+}
+input:focus, button:focus, label:focus{
+  outline: 2px solid rgb(249, 149, 0);
+  outline-offset: 2px;
+  border: 1px solid rgb(249, 149, 0);
+}
+*:focus {
+  outline: 2px solid rgb(249, 149, 0)!important;
+  outline-offset: 2px!important;
+  border: 1px solid rgb(249, 149, 0) !important;
+}
